Kubernetes/K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  type: ClusterIP
  selector:
    app: express
  ports:
    - name: http
      port: 80
      targetPort: 3000
