Kubernetes/K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app.kubernetes.io/name: ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
       paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: express-service
              port: 
                number: 80
